change equipageList RWD break piont / fix layout bug

--- a/assets/scss/pages/_equipmentStyle.scss
+++ b/assets/scss/pages/_equipmentStyle.scss
@@ -53,7 +53,7 @@
     font-weight: 700;
     margin-bottom: 44px;
 }
-@media  (max-width: 375px) {   
+@media  (max-width: 768px) {   
     .equipage>h3, .priceList>h3{
         font-size: 20px;
         margin-bottom: 24px;
@@ -66,7 +66,7 @@
     margin-bottom: 44px;
     position: relative;
 }
-@media  (max-width: 375px) {   
+@media  (max-width: 768px) {   
     .equipage{
         padding: 12px;
         margin-bottom: 24px;
@@ -107,11 +107,13 @@
     overflow: hidden;
     
 }
+/*
 @media  (max-width: 375px) {
     .equipageList{
         gap: 12px;
     }
 }
+*/
 
 /* 改用BS通用樣式對card設定
 .equipageList li{
@@ -125,7 +127,7 @@
     height: 160px;
     margin: 0 auto;
 }
-@media (max-width: 375px) {
+@media (max-width: 768px) {
 .equipageImg{
     width: 44px;
     height: 44px;
@@ -149,15 +151,17 @@
 }
 
 
-@media (max-width: 375px) {
+@media (max-width: 768px) {
     .equipageCard{
     box-sizing: border-box;
-    width: 327px;
+    //width: 327px;
+    width: 100%;
     height: 68px;
     flex-direction: row-reverse;
     justify-content: space-between;
     align-content: center;
 }
+/*
     .equipageCard>.flex-dire-c{
         flex-direction: row;
     }
@@ -170,7 +174,7 @@
     .align-self-end{ 
         align-self: center;
     }
-    
+*/
 }
 
 .rentBorder{
@@ -186,7 +190,7 @@
     height: 32px;
     margin: 0;
 }
-@media (max-width: 375px) {
+@media (max-width: 768px) {
     .rent{
     align-content: center;
     height: 26px;
@@ -212,7 +216,7 @@
     border: 1px solid #55AFF4;
     margin: 0;
 }
-@media (max-width: 375px) {
+@media (max-width: 768px) {
     .free{
     height: 26px;
     font-size: 12px;
@@ -232,7 +236,7 @@
     color: #A3A3A3;
     margin: 0;
 }
-@media (max-width: 375px) {
+@media (max-width: 768px) {
     .owned{
     height: 26px;
     font-size: 12px;
